fix: enable preview mode by jvm flag